# tmnt-bot

./: .gitignore  README.md  main.py  pyproject.toml
tmnt_bot/: settings.py
tmnt_bot/config/: log.py
tmnt_bot/middleware/: language.py  text.py  user.py
tmnt_bot/route/: text.py
tmnt_bot/util/: dispatcher.py  lifecycle.py  pyphen.py  spacy.py  syllables.py  words.py
